Wrap Fix

--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -362,7 +362,7 @@ i {
 						display: inline-block;
 						text-align: left;
 					}
-					&:nth-last-child(3){
+					&:nth-last-child(2){
 						white-space: initial;
 						text-overflow: initial;
 						width: auto;
